# personal-invest

./: .env.example  .env.server.example  .gitignore  AGENTS.md  Makefile  README.md  config.yaml  pyproject.toml
backend/app/: main.py
backend/migrations/: 001_init.sql  002_schema_migration.sql  003_instrument.sql  004_fund_analysis_type.sql  005_advice_rule_trace.sql  006_instrument_sector_map.sql  007_portfolio_snapshot.sql  008_review_task.sql  009_decision_record.sql  010_decision_outcome.sql  011_stock_financial_snapshots.sql  012_financial_event.sql  013_fund_profile_risk_return.sql  014_fund_benchmark_peer_exposure.sql  015_fund_deep_event.sql  016_etf_profile_exposure.sql  (+3 more)
docs/: README.md  api.md  architecture.md  business-information-architecture.md  business-roadmap.md  cost-and-risk.md  data-pipeline.md  data-sources.md  development.md  etf-deep-analysis-design.md  feature-matrix.md  fund-deep-analysis-design.md  limitations.md  long-term-roadmap.md  operation-backlog.md  operations-runbook.md  product-backlog.md  purpose.md  release-checklist.md  roadmap.md  stock-financial-analysis-design.md  storage.md  task-board.md  ui-audit.md  user-guide.md  ux.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: audit_real_only.py  backend.sh  backend_prod.sh  backup.sh  check.sh  dev.sh  doctor.sh  frontend.sh  frontend_prod.sh  health.sh  init_db.py  lib.sh  migrate_db.py  probe_market_sources.py  prod.sh  purge_non_real_data.py  setup.sh  static_frontend.py  write_runtime_config.py
worker/: daily_job.py  storage.py
(+188 files in other folders)
