[project]
name = "personal-invest"
version = "0.1.0"
description = "浏览器可访问、页面优雅、体验良好的本地个人投资研究与复盘系统"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.1",
  "python-multipart==0.0.20",
  "apscheduler==3.11.0",
  "duckdb==1.1.3",
  "pandas==2.2.3",
  "pyarrow==18.1.0",
  "markdown==3.7",
]

[project.optional-dependencies]
data = [
  "akshare>=1.16.0",
  "baostock>=0.8.8",
]
dev = [
  "ruff==0.8.4",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
